test/spec/custom-page-sizes/memory_max_i64.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/custom-page-sizes/memory_max_i64.wast
;;; ARGS*: --enable-custom-page-sizes
;;; ARGS*: --enable-memory64
(;; STDOUT ;;;
out/test/spec/custom-page-sizes/memory_max_i64.wast:19: assert_unlinkable passed:
  error: invalid import "test.import"
out/test/spec/custom-page-sizes/memory_max_i64.wast:26: assert_unlinkable passed:
  error: expected import "test.unknown" to have kind func, not memory
out/test/spec/custom-page-sizes/memory_max_i64.wast:38: assert_malformed passed:
  out/test/spec/custom-page-sizes/memory_max_i64/memory_max_i64.3.wat:1:13: error: invalid int "0x1_0000_0000_0000_0000"
  (memory i64 0x1_0000_0000_0000_0000 (pagesize 1))
              ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/custom-page-sizes/memory_max_i64.wast:43: assert_invalid passed:
  out/test/spec/custom-page-sizes/memory_max_i64/memory_max_i64.4.wasm:0000013: error: initial pages (281474976710657) must be <= (281474976710656)
  0000013: error: OnMemory callback failed
5/5 tests passed.
;;; STDOUT ;;)
